# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
models/: box.glb
shaders/: average.frag  tonemap.frag
